Implement initial setup for backend

--- a/backend/backend/appsettings.json
+++ b/backend/backend/appsettings.json
@@ -1,9 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=MALINDU\\SQLEXPRESS;Database=MediHubDB;Trusted_Connection=true;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    },
+    "Jwt": {
+        "Key": "YourSuperSecretKeyHereAtLeast32CharactersLong!",
+        "Issuer": "https://localhost:7000",
+        "Audience": "https://localhost:3000"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
